--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "main": "server.js",
   "devDependencies": {},
   "scripts": {
+    "start": "node server.js"
     "test": "echo \"Error: no test specified\" && exit 1"
-    "start": "node server"
   },
   "repository": {
     "type": "git",
